Added central area, and reorganised.

--- a/all.tex
+++ b/all.tex
@@ -14,26 +14,14 @@
 
 \input{southwest} 
 
-\section{Glen Coe and Fort William}
 
-Including Glen Etive, Kinlochleven
+\input{central}
 
-\section{Central}
+\input{glencoe-fortwilliam}
 
-Loch Earhm Ben Lawyers, Glen Lyon...
-
-Loch Voil
-
-Cruach Àrdrain and Beinn Tulaichean
-
-Sgiath Chùil and Meall Glas from Glen Lochay
-
-
-
-Creag Mhòr and Beinn Heasgarnich
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{A86}
 
 East of Roybridge, including Newtonmore area. 
-
 \end{document}
