--- a/cairngorms.tex
+++ b/cairngorms.tex
@@ -34,7 +34,7 @@ A' Mharconaich and Geal Chàrn.
 Ben Alder and Beinn Bheòil, from Culra.
 
 \item[*]
-Aonach Beag, Geal Chàrn, Beinn Èibhinn and Càrn Dearg, from Culra.
+Càrn Dearg, Geal Chàrn, Aonach Beag and Beinn Èibhinn  from Culra.
 
 \item
 Meall Chuaich.
