--- a/southwest.tex
+++ b/southwest.tex
@@ -34,7 +34,8 @@ west to Oban and Mull.
 
 \item Ben More and Stob Binnein.
 
-\item Meall Glas and Sgiath Chuil from Glen Dochart.
+\item Meall Glas and Sgiath Chuil from Glen Dochart.  Alternatively from Glen
+  Lochay. 
 \end{itemize}
 
 %%%%%
@@ -59,6 +60,9 @@ west to Oban and Mull.
 \item Beinn Dòrain and Beinn an Dòthaidh.
 
 \item[*] Beinn Achaladair and Beinn a'Chreachain.
+
+\item Stob Ghabhar and Stob a'Choire Odhair.
+
 \end{itemize}
 
 %%%%%
