--- a/cairngorms.tex
+++ b/cairngorms.tex
@@ -1,76 +1,56 @@
 \section{The Cairngorms}
 
-\subsection{Blair Atholl}
+These are ordered clockwise, from the South-East.
 
-\begin{itemize}
-\item Beinn a' Ghlò: Càrn Liath, Braigh Coire Chruinn-bhalgain, and Càrn nan
-  Gabhar.
+\subsection{South-east Cairngorms}
 
-\item Càrn a' Chlamain.
+\begin{munros}
+\item Mayar and Driesh. \tick
 
-\item Beinn Dearg.
-\end{itemize}
+\item Mount Keen.  Alternatively from Glen Tanar. 
+\end{munros}
 
-%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Pass of Drumochter}
+\subsection{East of Braemar}
 
-\begin{itemize}
-\item
-Beinn Udlamain and Sgàirneach Mhòr.  Could be combined with following.
+\begin{munros}
+\item \target Ben Avon.  33.5km, 1004m; 8--10 hrs.  NO188912.  Could be combined
+  with Beinn a' Bhùird.  \tick
 
-\item
-A' Mharconaich and Geal Chàrn.
+\item \target White Mounth Munros: Lochnagar, Càrn a' Choire Bhòidheach, Càrn an
+  t-Sagairt Mòr, Cairn Bannoch, and Broad Cairn.  \tick
 
-\item Càrn na Caim and A' Bhuidheanach Bheag.
-\end{itemize}
+\item Mount Keen.  29km, 1228m; 9--11 hrs.  NO309851.  Alternatively from
+  south.  \tick
+\end{munros}
 
-%%%%%
-
-\subsection{Dalwhinnie}
-
-\begin{itemize}
-\item[*]
-Ben Alder and Beinn Bheòil, from Culra.
-
-\item[*]
-Càrn Dearg, Geal Chàrn, Aonach Beag and Beinn Èibhinn  from Culra.
-
-\item
-Meall Chuaich.
-\end{itemize}
 
 %%%%%
 
-\subsection{Glen Feshie}
+\subsection{West of Braemar}
 
-\begin{itemize}
-\item Sgòr Gaoith.
+\begin{munros}
+\item Beinn Iutharn Mhòr and Càrn Bhac.
 
-\item[*] Beinn Bhrotain and Monadh Mòr.
+\item An Sgarsoch and Càrn an Fhidhleir.
 
-\item Mullach Clach a' Bhlàir.
-\end{itemize}
+\item Càrn a' Mhàim.
 
-%%%%%
+\item\target Beinn Mheadhoin and Derry Cairngorm.  31km, 1200m; 9--10~hrs.
+  NO062898.  Or from Ski Centre.  \tick
 
-\subsection{Glen More and the Ski Centre}
+\item Beinn a' Chaorainn and Beinn Bhreac.
 
-\begin{itemize}
-\item Bynack More.
 
-\item[*] The Devil's Point, Cairn Toul, Sgòr an Lochain Uaine, Braeriach.
-
-\item[*] Ben Macdui and Cairngorm.  Could combine with following. 
-
-\item[*] Beinn Mheadhoin and Derry Cairngorm.  Or from Lin of Dee.
-\end{itemize}
-
+\item \target Beinn a' Bhùird.  28km, 959m; 7--9 hrs.  NO116909.  Could be
+  combined with Ben Avon.  \tick
+\end{munros}
 %%%%%%%%%%
 
 \subsection{A93}
 
-\begin{itemize}
+\begin{munros}
 \item Glas Tulaichean and Càrn an Rìgh
 
 \item
@@ -81,43 +61,78 @@ Glas Maol Munros: Càrn an Tuirc, Cairn of Claise, Glas Maol, and Creag Leacac.
 \item An Socach.
 
 \item Tolmount and Tom Buidhe.
-\end{itemize}
+\end{munros}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Blair Atholl}
+
+\begin{munros}
+\item Beinn a' Ghlò: Càrn Liath, Braigh Coire Chruinn-bhalgain, and Càrn nan
+  Gabhar.
+
+\item Càrn a' Chlamain.
+
+\item Beinn Dearg. \tick
+\end{munros}
 
 %%%%%
 
-\subsection{West of Braemar}
+\subsection{Pass of Drumochter}
 
-\begin{itemize}
-\item Beinn Iutharn Mhòr and Càrn Bhac.
+\begin{munros}
+\item
+Beinn Udlamain and Sgàirneach Mhòr.  Could be combined with following.  \tick
 
-\item An Sgarsoch and Càrn an Fhidhleir.
+\item
+A' Mharconaich and Geal Chàrn. \tick
 
-\item Càrn a' Mhàim.
-
-\item Beinn Mheadhoin and Derry Cairngorm.  Or from Ski Centre.
-
-\item Beinn a' Chaorainn and Beinn Bhreac.
-
-\item[*] Beinn a' Bhùird.  Could be combined with Ben Avon.
-\end{itemize}
+\item Càrn na Caim and A' Bhuidheanach Bheag. \tick
+\end{munros}
 
 %%%%%
 
-\subsection{East of Braemar}
+\subsection{Dalwhinnie}
 
-\begin{itemize}
-\item[*] Ben Avon.  Could be combined with Beinn a' Bhùird.
+\begin{munros}
+\item \target
+Ben Alder and Beinn Bheòil, from Culra. \tick
 
-\item[*] White Mounth Munros: Lochnagar, Càrn a' Choire Bhòidheach, Càrn an
-  t-Sagairt Mòr, Cairn Bannoch, and Broad Cairn.
+\item \target Càrn Dearg, Geal Chàrn, Aonach Beag and Beinn Èibhinn from
+  Culra.  \tick
 
-\item Mount Keen.  Alternatively from south. 
-\end{itemize}
+\item
+Meall Chuaich.  \tick
+\end{munros}
 
-\subsection{South-east Cairngorms}
+%%%%%
 
-\begin{itemize}
-\item Mayar and Driesh.
+\subsection{Glen Feshie}
 
-\item Mount Keen.  Alternatively from Glen Tanar. 
-\end{itemize}
+\begin{munros}
+\item Sgòr Gaoith.  \tick
+
+\item \target Beinn Bhrotain and Monadh Mòr.  29km, 1505m; 9--11 hrs.
+  NN850985.  \tick
+
+\item Mullach Clach a' Bhlàir.
+\end{munros}
+
+%%%%%
+
+\subsection{Glen More and the Ski Centre}
+
+\begin{munros}
+\item Bynack More.
+
+\item\target The Devil's Point, Cairn Toul, Sgòr an Lochain Uaine, Braeriach.
+  36km, 1820m; 13 hrs.  NH984073.  \tick
+
+\item\target Ben Macdui and Cairngorm.  Could combine with following.  \tick
+
+\item\target Beinn Mheadhoin and Derry Cairngorm.  Or from Lin of Dee.  \tick
+\end{munros}
+
+
+%%%%%
