--- a/central.tex
+++ b/central.tex
@@ -7,35 +7,35 @@ Described roughly clockwise around Loch Tay.
 
 \subsection{Glen Lednock}
 
-\begin{itemize}
+\begin{munros}
 \item
 Ben Chonzie
-\end{itemize}
+\end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Loch Earn}
 
-\begin{itemize}
+\begin{munros}
 \item
 Ben Vorlich and Stùc a' Chròin
-\end{itemize}
+\end{munros}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Loch Voil}
 
-\begin{itemize}
+\begin{munros}
 \item
 Cruach Àrdrain and Beinn Tulaichean
-\end{itemize}
+\end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Glen Lochay}
 
-\begin{itemize}
+\begin{munros}
 \item
 Sgiath Chùil and Meall Glas.  Alternatively from Glen Dochart.
 
@@ -44,28 +44,28 @@ Creag Mhòr and Beinn Heasgarnich.
 
 \item
 Meall Ghaordaidh.
-\end{itemize}
+\end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \subsection{Ben Lawyers area}
 
-\begin{itemize}
+\begin{munros}
 \item Meall nan Tarmachan
 
-\item Meall Corranaich and Meall a'Choire Lèith.  Can be combined with
-  following. 
+\item \target Meall Corranaich and Meall a'Choire Lèith.  Can be combined with
+  following.
 
-\item Ben Lawers and Beinn Ghlas.  Can be combined with previous. 
+\item \target Ben Lawers and Beinn Ghlas.  Can be combined with previous.
 
 \item Meall Greigh, Meall Garbh and An Stùc.
-\end{itemize}
+\end{munros}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Glen Lyon}
 
-\begin{itemize}
+\begin{munros}
 \item
 Stùcd an Lochain.
 
@@ -75,13 +75,13 @@ Meall Buidhe.
 \item
 Càrn Gorm, Meall Garbh, Càrn Mairg and Creag Mhòr.
 
-\end{itemize}
+\end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Braes of Foss}
 
-\begin{itemize}
+\begin{munros}
 \item
 Schiehallion
-\end{itemize}
+\end{munros}
