--- a/glencoe-fortwilliam.tex
+++ b/glencoe-fortwilliam.tex
@@ -3,14 +3,93 @@
 
 \subsection{Glen Coe}
 
-Including Ballachulish
+From East to West. 
+
+\begin{munros}
+\item
+Creise and Meall a'Bhùiridh
+
+\item\tick
+Buachaille Etive Mòr: Stob Dearg and Stob na Bròige.  13km, 1110m; 7-9
+hrs.  NN221563. 
+
+\item\tick
+Buachaille Etive Beag: Stob Coire Raineach and Stob Dubh.  8km, 900m; 5--6
+hrs.  NN187562.
+
+\item
+Bidean nam Bian and Stob Coire Sgreamhach
+
+\item
+Aonach Eagach: Meall Dearg and Sgòrr nam Fiannaidh
+
+\item
+Sgòr na h-Ulaidh and Meall Lighiche
+
+\item
+Beinn a' Bheithir: Sgòrr Dhearg and Sgòrr Dhònuill
+\end{munros}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Glen Etive}
 
+\begin{munros}
+\item\tick
+Stob Coir'an Albannaich and Meall nan Eun
+
+\item\tick
+Ben Starav and Glas Bheinn Mhòr
+
+\item\tick
+Beinn nan Aighenan.  Can combine with previous. 
+\end{munros}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \subsection{Kinlochleven}
+
+\begin{munros}
+\item\tick
+Binnein Mòr and Na Gruagaichean.  14km, 1336m; 7--9 hrs.  NN187622.
+
+\item\tick
+Sgùrr Èilde Mòr and Binnein Beag.  20km, 1582m; 9--11 hrs.  NN188623.
+\end{munros}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Glen Nevis}
 
+From West to East. 
+
+\begin{munros}
+\item\target\tick
+Stob Ban  and Mullach nan Coirean.  13km, 1155m; 6--8 hrs. NN145683. 
+
+\item\target\tick
+The Ring of Steall: An Gearanach, Stob Coire a' Chàirn, Am Bodach and Sgùrr
+a'Mhaim.  16km, 1676m; 9--12 hrs.  NN168691.
+
+\item
+Aonach Beag and Aonach Mòr
+\end{munros}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 \subsection{Ben Nevis Range, from North}
 
-As far as Roy Bridge. 
+From West to East.  As far as Roy Bridge. 
+
+\begin{munros}
+\item\tick
+Ben Nevis and Càrn Mòr Dearg.  17.5km, 1506m; 10--11hrs.  NN144763.
+
+\item\target\tick
+The Grey Corries: Stob Choire Claurigh, Stob Coire an Laoigh and Sgùrr
+Chòinnich Mòr. 
+
+\item
+Stob Bàn.  Could be combined with previous. 
+\end{munros}
