--- a/southwest.tex
+++ b/southwest.tex
@@ -5,7 +5,7 @@ west to Oban and Mull.
 
 \subsection{Loch Lomond}
 
-\begin{itemize}
+\begin{munros}
 \item Ben Lomond.
 
 \item Beinn Narnain and Beinn Ìme.
@@ -15,80 +15,85 @@ west to Oban and Mull.
 \item Ben Vorlich.
 
 \item Beinn Chabhair.
-\end{itemize}
+\end{munros}
 
 %%%%%
 
 \subsection{Glen Fyne}
 
-\begin{itemize}
+\begin{munros}
 \item Beinn Bhuide.
-\end{itemize}
+\end{munros}
 
 %%%%%
 
 \subsection{Crainlarich}
 
-\begin{itemize}
-\item An Caisteal and Beinn a'Chròin.
+\begin{munros}
+\item An Caisteal and Beinn a'Chròin.  NN~369~239.
+
+\item \target Cruach Àrdrain and Beinn Tulaichean.  NN~369~239.  Alternatively
+  from Loch Voil.
 
 \item Ben More and Stob Binnein.
 
 \item Meall Glas and Sgiath Chuil from Glen Dochart.  Alternatively from Glen
   Lochay. 
-\end{itemize}
+\end{munros}
 
 %%%%%
 
 \subsection{Tyndrum}
 
-\begin{itemize}
+\begin{munros}
 \item Ben Challum.
 
 \item Ben Oss and Beinn Dubhchraig.
 
-\item[*] Ben Lui and Beinn a'Chlèibh.  Could be combined with previous. 
+\item\target Ben Lui and Beinn a'Chlèibh.  Could be combined with previous. 
 
 \item Beinn Mhanach.
-\end{itemize}
+\end{munros}
 
 %%%%%
 
 \subsection{Bridge of Orchy}
 
-\begin{itemize}
+\begin{munros}
 \item Beinn Dòrain and Beinn an Dòthaidh.
 
-\item[*] Beinn Achaladair and Beinn a'Chreachain.
+\item \target Beinn Achaladair and Beinn a'Chreachain.  21.5km, 1266m; 7--8
+  hrs.  NN313437.
 
 \item Stob Ghabhar and Stob a'Choire Odhair.
 
-\end{itemize}
+\end{munros}
 
 %%%%%
 
 \subsection{Loch Awe}
 
-\begin{itemize}
+\begin{munros}
 \item Beinn a' Chochuill and Beinn Eunaich.
 
-\item [*] Ben Cruachan and Stob Daimh.
-\end{itemize}
+\item \target\tick Ben Cruachan and Stob Daimh.  13.75km, 1376m; 8--9 hrs.
+  NN080267. 
+\end{munros}
 
 %%%%%
 
 \subsection{Mull}
 
-\begin{itemize}
+\begin{munros}
 \item Ben More.
-\end{itemize}
+\end{munros}
 
 %%%%%
 
 \subsection{Glen Creran}
 
-\begin{itemize}
+\begin{munros}
 \item Beinn Sgulaird.
 
 \item Beinn Fhionnlaidh.
-\end{itemize}
+\end{munros}
