--- a/6.tex
+++ b/6.tex
@@ -6,10 +6,10 @@ This area is broadly North of the Great Glen, but South of Glen Shiel.
 
 \begin{munros}
 \item
-Gulvain.
+Gulvain.  \tick
 
 \item
-Sgùrr Thuilm and Sgùrr nan Coireachan.
+Sgùrr Thuilm and Sgùrr nan Coireachan.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -18,10 +18,11 @@ Sgùrr Thuilm and Sgùrr nan Coireachan.
 
 \begin{munros}
 \item
-Luinne Bheinn and Meall Bhuidhe.
+\target Luinne Bheinn and Meall Bhuidhe.   27km, 1586m; 11-13 hrs.
+NG765002.  \tick
 
 \item
-Ladhar Bheinn.
+\target  Ladhar Bheinn.  22.5km, 1399m; 9--12 hrs.  NG765002.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -30,12 +31,12 @@ Ladhar Bheinn.
 
 \begin{munros}
 \item
-Sgùrr nan Coireachan, Garbh Chioch Mhor, Sgùrr na Cìche.  Can be combined with
-following. 
+\target Sgùrr nan Coireachan, Garbh Chioch Mhor, Sgùrr na Cìche.  26km, 1523m;
+10--12~hrs.  NM988916.  Can be combined with following.  \tick
 
 \item
-Sgùrr Mòr (And maybe Sgùrr an Fhuarain, Corbett).  Can be combined with
-previous. 
+\target Sgùrr Mòr And Sgùrr an Fhuarain (Corbett).  24km, 1510m;
+9--11~hrs. NM987916.  Can be combined with previous.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -44,7 +45,7 @@ previous.
 
 \begin{munros}
 \item
-Sròn a' Choire Ghaibh and Meall na Teanga.
+Sròn a' Choire Ghaibh and Meall na Teanga.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -56,7 +57,7 @@ Sròn a' Choire Ghaibh and Meall na Teanga.
 Gairich.
 
 \item
-Gleouraich and Spidean Mialach.
+Gleouraich and Spidean Mialach.  \tick
 
 \item
 Sgùrr a' Mhaoraich.
