--- a/A86.tex
+++ b/A86.tex
@@ -10,7 +10,7 @@ Described from West to East.  East of Roybridge, including Newtonmore area.
 Stob Coire Easain and Stob a'Choire Mheadhoin.
 
 \item
-Chno Dearg and Stob Coire Sgriodain.
+Chno Dearg and Stob Coire Sgriodain.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -31,13 +31,14 @@ Sgòr Gaibhre and Càrn Dearg.
 
 \begin{munros}
 \item
-Beinn a' Chaorainn and Beinn Teallach.
+Beinn a' Chaorainn and Beinn Teallach.  16km, 1172m; 6--8~hrs.  NN377814.  \tick
 
 \item
 Beinn a' Chlachair, Geal Chàrn and Creag Pitridh.
 
 \item
-Creag Meagaidh circuit: Càrn Liath, Stob Poite Coire Àrdair and Creag Meagaidh.
+Creag Meagaidh circuit: Càrn Liath, Stob Poite Coire Àrdair and Creag
+Meagaidh.  21km, 1080m; 8--10~hrs.  NN482872.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
