--- a/AffricMullardochStrathfarrar.tex
+++ b/AffricMullardochStrathfarrar.tex
@@ -5,14 +5,16 @@
 
 \begin{munros}
 \item
-Tom a' Chòinich and Toll Creagach.
+Tom a' Chòinich and Toll Creagach.  16.5km, 1096m; 6--8~hrs.  NH217242.  \tick
 
 \item
-Càrn Eige Beinn Fhionnlaidh and Mam Sodhail.
+Càrn Eige, Beinn Fhionnlaidh and Mam Sodhail.  28km, 1727m; 10--13~hrs.
+NH216242.  \tick
 
 \item
 Mullach nan Dheiragain, Sgùrr nan Ceathreamhnan and An Socach.  From
-Alltbeithe.
+Alltbeithe.  20km, 1484m; 9--11~hrs.  NH079202. (From Glen Affric to
+Alltebeithe, one-way, 14km, 250m.)  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -22,7 +24,7 @@ Alltbeithe.
 \begin{munros}
 \item
 The Loch Mullardoch Munros: Càrn nan Gobhar, Sgùrr na Lapaich, An Riabhachan
-and An Socach.
+and An Socach.  29km, 1826m; 11--14~hrs.  NH218315.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -32,6 +34,7 @@ and An Socach.
 \begin{munros}
 \item
 Glen Strathfarrar Munros: Sgùrr na Ruaidhe, Càrn nan Gobhar, Sgùrr a' Choire
-Ghlais and Sgùrr Fhuar-thuill.
+Ghlais and Sgùrr Fhuar-thuill.  25km, 1567m; 7--10~hrs.  NH283386.  Bike
+useful for last 7km.  Road open to vehicles from 9am.  \tick
 \end{munros}
 
