--- a/FarNorth.tex
+++ b/FarNorth.tex
@@ -6,7 +6,7 @@ This is the area North of Garve.
 
 \begin{munros}
 \item
-Ben Wyvis.
+Ben Wyvis.  14km, 935m; 4.5--5.5~hrs. NH410671.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -16,10 +16,10 @@ Ben Wyvis.
 \begin{munros}
 \item
 Sgùrr Mòr and the eastern Fannichs: Beinn Liath Mhòr Fannaich, Sgùrr Mòr,
-Meall Gorm and An Coileachan.
+Meall Gorm and An Coileachan.  \tick
 
 \item
-Am Faochagach.
+Am Faochagach.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -28,17 +28,19 @@ Am Faochagach.
 
 \begin{munros}
 \item
-Meall a' Chrasgaidh, Sgùrr nan Clach Geala and Sgùrr nan Each.
+Meall a' Chrasgaidh, Sgùrr nan Clach Geala and Sgùrr nan Each.  \tick
 
-\item
-Sgùrr Breac and A' Chailleach.
+\item\target\target
+Sgùrr Breac and A' Chailleach.  16km, 1127m; 6--8~hrs. NH163761.  \tick
 
-\item
-Fisherfield 6: Sgùrr Ban, Mullach Coire Mhic Fhearchair, Beinn Tarsuinn, A'
-Mhaighdean, Ruadh Stac Mòr and Beinn a' Chlaidheimh.
+\item\target\target Fisherfield 6: Sgùrr Ban, Mullach Coire Mhic Fhearchair,
+  Beinn Tarsuinn, A' Mhaighdean, Ruadh Stac Mòr and Beinn a' Chlaidheimh.
+  29km, 2254m; 12--18~hrs.  NH065809 (Shenavall Bothy: about 2~hrs from
+  NH114850).  \tick
 
-\item
-An Teallach: Bidein a Ghlas Thuill and Sgùrr Fiona.
+\item\target\target
+An Teallach: Bidein a Ghlas Thuill and Sgùrr Fiona.    20km, 1415m;
+9--10~hrs.  NH093879.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -46,11 +48,11 @@ An Teallach: Bidein a Ghlas Thuill and Sgùrr Fiona.
 \subsection{Inverlael}
 
 \begin{munros}
-\item
+\item\target
 Beinn Dearg, Cona Mheall, Meall nan Ceapraichean and Eididh nan Clach Geala.
+27km, 1569m; 9--11~hrs.  NH181852.  \tick
 
-\item
-Seana Bhràigh.
+\item\target Seana Bhràigh. 27km, 1095m; 9--10~hrs.  NH181852.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -59,11 +61,11 @@ Seana Bhràigh.
 
 \begin{munros}
 \item
-Ben More Assynt and Conival.
+Ben More Assynt and Conival.  \tick
 
 \item
-Ben Hope.
+Ben Hope.  \tick
 
 \item
-Ben Klibreck.
+Ben Klibreck.  \tick
 \end{munros}
