--- a/FarNorthWest.tex
+++ b/FarNorthWest.tex
@@ -6,7 +6,7 @@ This is the area North of Kyle and West of Garve.
 
 \begin{munros}
 \item
-Bidein a' Choire Sheasgaich and Lurg Mhòr.
+Bidein a' Choire Sheasgaich and Lurg Mhòr.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -16,7 +16,7 @@ Bidein a' Choire Sheasgaich and Lurg Mhòr.
 
 \begin{munros}
 \item
-Maol Chean-dearg
+Maol Chean-dearg.
 
 \item
 Sgòrr Ruadh.  Can be combined with the following.
@@ -24,11 +24,12 @@ Sgòrr Ruadh.  Can be combined with the following.
 \item
 Beinn Liath Mhòr.  Can be combined with the previous. 
 
-\item
-Sgùrr Chòinnich and Sgùrr a'Chaorachain.  Can be combined with the following.
+\item\target
+Sgùrr Chòinnich and Sgùrr a'Chaorachain.  20.5km, 1251m; 7--8~hrs.  Can cycle
+in for 5.5km.   NH039493.  Can be combined with the following.  \tick
 
-\item
-Maoile Lunndaidh.  Can be combined with the previous. 
+\item\target Maoile Lunndaidh.  26km, 1005m; 8--11 hrs.  Can cycle in for
+  8.5km.  NH039493.  Can be combined with the previous.  \tick
 
 \item
 Moruisg and Sgùrr nan Ceannaichean.
@@ -39,14 +40,16 @@ Moruisg and Sgùrr nan Ceannaichean.
 \subsection{Glen Torridon}
 
 \begin{munros}
-\item
-Beinn Alligin: Sgùrr Mòr and Tom na Gruagaich.
+\item\target Beinn Alligin: Sgùrr Mòr and Tom na Gruagaich.  10.5km, 1190m;
+  7--8~hrs. NG868576.  \tick
 
-\item \target\
-Liathach: Spidean a' Choire Lèith and Mullach an Rathain.
+\item \target
+Liathach: Spidean a' Choire Lèith and Mullach an Rathain.  11.5km, 1326m;
+8--10~hrs.  NG935566.  \tick
 
-\item
+\item \target
 Beinn Eighe (western summits): Ruadh-Stac Mòr and Spidean Coire nan Clach.
+18km, 1116m; 7--9~hrs.  NG958569.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -54,8 +57,8 @@ Beinn Eighe (western summits): Ruadh-Stac Mòr and Spidean Coire nan Clach.
 \subsection{A832}
 
 \begin{munros}
-\item
-Slioch.
+\item\target
+Slioch.  19km, 1144m; 8--9~hrs.  NH038624.  \tick
 
 \item
 Fionn Bheinn.
