--- a/GlenShiel.tex
+++ b/GlenShiel.tex
@@ -6,27 +6,47 @@ Including surrounding areas.  From East to West.
 
 \begin{munros}
 \item
-Càrn Ghluasaid, Sgùrr nan Conbhairean and Sàil Chaorainn.
+Càrn Ghluasaid, Sgùrr nan Conbhairean and Sàil Chaorainn.  17.5km, 1260m; 7--8
+hrs.  NH144103.  \tick
 
 \item
-A' Chralaig and Mullach Fraoch-choire.
+A' Chralaig and Mullach Fraoch-choire.  13km, 1150m; 6--8 hrs.  NH092121.
+Boggy return. \tick
 
 \item
-Ciste Dhubh and Am Bathach.
+Ciste Dhubh and Am Bathach.  12.5km, 1040m; 5--7 hrs. NH087122.  \tick
 
 \item
-South Glen Shiel Ridge: Creag a' Mhaim, Druim Shionnach, Aonach Air Chrith,
-Maol Chinn-dearg, Sgùrr an Doire Leathain, Sgùrr an Lochain, Creag nan Dàmh.
+\target  South Glen Shiel Ridge: Creag a' Mhaim, Druim Shionnach, Aonach Air
+Chrith, Maol Chinn-dearg, Sgùrr an Doire Leathain, Sgùrr an Lochain, Creag nan
+Dàmh.  26.75km, 1818m; 9--11~hrs (plus cycle).  NH079117.  \tick
 
 \item
-Brothers Ridge: Sàileag, Sgùrr a Bhealaich Dheirg, Aonach Meadhoin.
+\target Brothers Ridge: Sàileag, Sgùrr a Bhealaich Dheirg, Aonach Meadhoin.
+10km, 1274m; 6--8 hrs (plus cycle).  NH009135.  Could be combined with
+following.  \tick.
 
 \item
-Five Sisters of Kintail: Sgùrr na Ciste Duibhe, Sgùrr na Càrnach, Sgùrr
-Fhuaran.
+\target Five Sisters of Kintail: Sgùrr na Ciste Duibhe, Sgùrr na Càrnach,
+Sgùrr Fhuaran.  15km, 1385m; 8--10 hrs (plus cycle).  NH009135.  \tick
 
-\item \target
-The Saddle, Forcan Ridge and Sgùrr na Sgìne.  13km; 1350m; 7--9 hours.  NG965146
+\item \target The Saddle, Forcan Ridge and Sgùrr na Sgìne.  13km;
+  1350m; 7--9 hours.  NG965146.  \tick
+
+\item\target\target Sgùrr a' Bhac Chaolais and Buidhe Bheinn (joint Corbett).
+  NG965146 (Malagan). 
+\end{munros}
+
+
+\subsection{From Shiel Bridge}
+
+\begin{munros}
+\item\target\target Gleanne Undalaine circuit: Sgùrr Mhic Bharraich (Corbett)
+  and The Saddle.
+
+\item\target\target Beinn na h-Eaglaise and Beinn nan Caorach (Corbetts).
+
+\item Beinn Sgritheall.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -35,7 +55,7 @@ The Saddle, Forcan Ridge and Sgùrr na Sgìne.  13km; 1350m; 7--9 hours.  NG9651
 
 \begin{munros}
 \item
-Beinn Sgritheall.  Also possible from Shiel Bridge.
+Beinn Sgritheall.  Also possible from Shiel Bridge.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -44,8 +64,8 @@ Beinn Sgritheall.  Also possible from Shiel Bridge.
 
 \begin{munros}
 \item
-Beinn Fhada.  16.75km; 1234m; 6--7 hours.  NG961211.
+\target Beinn Fhada.  16.75km; 1234m; 6--7 hours.  NG961211.  Could be
+combined with following.  \tick
 
-\item
-A' Ghlas Bheinn.  21km; 1196m; 7--9 hours.  NG961211.
+\item \target A' Ghlas Bheinn.  21km; 1196m; 7--9 hours.  NG961211. \tick
 \end{munros}
