--- a/Skye.tex
+++ b/Skye.tex
@@ -5,7 +5,7 @@
 
 \begin{munros}
 \item
-Blà Bheinn.
+Blà Bheinn.  8km, 990m; 5--6~hrs.  NG560215.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -14,13 +14,14 @@ Blà Bheinn.
 
 \begin{munros}
 \item
-Sgùrr nan Gillean.
+\target  Sgùrr nan Gillean.  12km, 985m; 5--7~hrs.  NG484296.  \tick
 
 \item
-Am Basteir.
+\target Am Basteir.  14km, 1175m; 6--7~hrs.  NG484296.  Can be combined
+with following. \tick
 
 \item
-Bruach na Frìthe.
+\target Bruach na Frìthe.  13.75km, 947m; 5--7~hrs.   NG484296.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -29,20 +30,24 @@ Bruach na Frìthe.
 
 \begin{munros}
 \item
-Sgùrr a Mhadaidh and Sgùrr a Ghreadaidh.
+\target Sgùrr a Mhadaidh and Sgùrr a Ghreadaidh.  9.5km, 997m; 6--8~hrs.
+NG409225.  Can continue on ridge to following.  \tick
 
 \item
-Sgùrr na Banachdich.
+Sgùrr na Banachdich.  7.5km, 936m; 5--7~hrs.  NG409225.  \tick
 
 \item
-Inaccessible Pinnacle.
+\target\target Inaccessible Pinnacle.  8km, 1065m; 6--8~hrs.  NG411216.  \tick
 
 \item
-Sgùrr Mhic Chòinnich.  Could be combined with following.
+\target\target Sgùrr Mhic Chòinnich.  11km, 950m; 5--6~hrs.  NG408206.  Could
+be combined with following.  \tick
 
 \item
-Sgùrr Alasdair.  Could be combined with previous. 
+Sgùrr Alasdair.  9.5km, 992m; 5--6~hrs. NG408206.  Could be
+combined with previous.  \tick
 
 \item
-Sgùrr Dubh Mòr and Sgùrr nan Eag.
+\target\target  Sgùrr Dubh Mòr and Sgùrr nan Eag.  15km, 1159m; 7--11~hrs.
+NG408206.  \tick
 \end{munros}
