--- a/all.tex
+++ b/all.tex
@@ -19,6 +19,8 @@
 
 \tableofcontents
 
+``\target'' indicates a target.  ``\tick'' indicates I have a printout.  
+
 \input{cairngorms}
 
 \input{southwest} 
