--- a/cairngorms.tex
+++ b/cairngorms.tex
@@ -86,7 +86,7 @@ Glas Maol Munros: Càrn an Tuirc, Cairn of Claise, Glas Maol, and Creag Leacac.
 Beinn Udlamain and Sgàirneach Mhòr.  Could be combined with following.  \tick
 
 \item
-A' Mharconaich and Geal Chàrn. \tick
+A' Mharconaich and Geal Chàrn.   11.5km, 731m; 4--6~hrs.  NN627791. \tick
 
 \item Càrn na Caim and A' Bhuidheanach Bheag. \tick
 \end{munros}
@@ -96,11 +96,11 @@ A' Mharconaich and Geal Chàrn. \tick
 \subsection{Dalwhinnie}
 
 \begin{munros}
-\item \target
-Ben Alder and Beinn Bheòil, from Culra. \tick
+\item \target Ben Alder and Beinn Bheòil, from Culra.  17km, 1021m;
+  7--8~hrs. NN522761. \tick
 
 \item \target Càrn Dearg, Geal Chàrn, Aonach Beag and Beinn Èibhinn from
-  Culra.  \tick
+  Culra.  18.5km, 1110m; 8--9 hrs.  NN522761.  \tick
 
 \item
 Meall Chuaich.  \tick
@@ -129,9 +129,11 @@ Meall Chuaich.  \tick
 \item\target The Devil's Point, Cairn Toul, Sgòr an Lochain Uaine, Braeriach.
   36km, 1820m; 13 hrs.  NH984073.  \tick
 
-\item\target Ben Macdui and Cairngorm.  Could combine with following.  \tick
+\item\target Ben Macdui and Cairngorm.  17.5km, 932m; 6--8~hrs.  NH989059.
+  Could combine with following.  \tick
 
-\item\target Beinn Mheadhoin and Derry Cairngorm.  Or from Lin of Dee.  \tick
+\item\target Beinn Mheadhoin and Derry Cairngorm.  Approx.\ 24km, 2000m;
+  10-12~hrs. NH989059.  Or from Lin of Dee.  \tick
 \end{munros}
 
 
