--- a/central.tex
+++ b/central.tex
@@ -9,7 +9,7 @@ Described roughly clockwise around Loch Tay.
 
 \begin{munros}
 \item
-Ben Chonzie
+Ben Chonzie.
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -18,7 +18,7 @@ Ben Chonzie
 
 \begin{munros}
 \item
-Ben Vorlich and Stùc a' Chròin
+Ben Vorlich and Stùc a' Chròin.  \tick
 \end{munros}
 
 
@@ -28,7 +28,7 @@ Ben Vorlich and Stùc a' Chròin
 
 \begin{munros}
 \item
-Cruach Àrdrain and Beinn Tulaichean
+Cruach Àrdrain and Beinn Tulaichean.  \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -73,7 +73,7 @@ Stùcd an Lochain.
 Meall Buidhe.
 
 \item
-Càrn Gorm, Meall Garbh, Càrn Mairg and Creag Mhòr.
+Càrn Gorm, Meall Garbh, Càrn Mairg and Creag Mhòr.  \tick
 
 \end{munros}
 
