--- a/glencoe-fortwilliam.tex
+++ b/glencoe-fortwilliam.tex
@@ -9,19 +9,20 @@ From East to West.
 \item
 Creise and Meall a'Bhùiridh
 
-\item\tick
+\item
 Buachaille Etive Mòr: Stob Dearg and Stob na Bròige.  13km, 1110m; 7-9
-hrs.  NN221563. 
+hrs.  NN221563. \tick
 
-\item\tick
+\item
 Buachaille Etive Beag: Stob Coire Raineach and Stob Dubh.  8km, 900m; 5--6
-hrs.  NN187562.
+hrs.  NN187562.  \tick
 
 \item
-Bidean nam Bian and Stob Coire Sgreamhach
+Bidean nam Bian and Stob Coire Sgreamhach.  \tick
 
-\item
-Aonach Eagach: Meall Dearg and Sgòrr nam Fiannaidh
+\item\target
+Aonach Eagach: Meall Dearg and Sgòrr nam Fiannaidh.  9.5km, 1100m; 8--9~hrs
+(plus return on road).  NN174567.  \tick
 
 \item
 Sgòr na h-Ulaidh and Meall Lighiche
@@ -35,14 +36,14 @@ Beinn a' Bheithir: Sgòrr Dhearg and Sgòrr Dhònuill
 \subsection{Glen Etive}
 
 \begin{munros}
-\item\tick
-Stob Coir'an Albannaich and Meall nan Eun
+\item\target
+Stob Coir'an Albannaich and Meall nan Eun.  \tick
 
-\item\tick
-Ben Starav and Glas Bheinn Mhòr
+\item\target
+Ben Starav and Glas Bheinn Mhòr. \tick
 
-\item\tick
-Beinn nan Aighenan.  Can combine with previous. 
+\item\target Beinn nan Aighenan.  15.75km, 1320m; 7--9~hrs. NN136468.  Can
+  combine with previous. \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -50,11 +51,11 @@ Beinn nan Aighenan.  Can combine with previous.
 \subsection{Kinlochleven}
 
 \begin{munros}
-\item\tick
-Binnein Mòr and Na Gruagaichean.  14km, 1336m; 7--9 hrs.  NN187622.
+\item\target
+Binnein Mòr and Na Gruagaichean.  14km, 1336m; 7--9 hrs.  NN187622. \tick
 
-\item\tick
-Sgùrr Èilde Mòr and Binnein Beag.  20km, 1582m; 9--11 hrs.  NN188623.
+\item\target
+Sgùrr Èilde Mòr and Binnein Beag.  20km, 1582m; 9--11 hrs.  NN188623. \tick
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -64,15 +65,15 @@ Sgùrr Èilde Mòr and Binnein Beag.  20km, 1582m; 9--11 hrs.  NN188623.
 From West to East. 
 
 \begin{munros}
-\item\target\tick
-Stob Ban  and Mullach nan Coirean.  13km, 1155m; 6--8 hrs. NN145683. 
+\item\target
+Stob Ban  and Mullach nan Coirean.  13km, 1155m; 6--8 hrs. NN145683. \tick
 
-\item\target\tick
+\item\target
 The Ring of Steall: An Gearanach, Stob Coire a' Chàirn, Am Bodach and Sgùrr
-a'Mhaim.  16km, 1676m; 9--12 hrs.  NN168691.
+a'Mhaim.  16km, 1676m; 9--12 hrs.  NN168691.  \tick
 
 \item
-Aonach Beag and Aonach Mòr
+Aonach Beag and Aonach Mòr.
 \end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -83,13 +84,14 @@ Aonach Beag and Aonach Mòr
 From West to East.  As far as Roy Bridge. 
 
 \begin{munros}
-\item\tick
-Ben Nevis and Càrn Mòr Dearg.  17.5km, 1506m; 10--11hrs.  NN144763.
+\item\target
+Ben Nevis and Càrn Mòr Dearg.  17.5km, 1506m; 10--11hrs.  NN144763.  \tick
 
-\item\target\tick
+\item\target
 The Grey Corries: Stob Choire Claurigh, Stob Coire an Laoigh and Sgùrr
-Chòinnich Mòr. 
+Chòinnich Mòr.   21.5km, 1544m; 9--10~hrs.  NN252793.  \tick
 
 \item
-Stob Bàn.  Could be combined with previous. 
+Stob Bàn.  18km, 852m; 6--7~hrs.   NN252793.  Could be combined with previous.
+\tick  
 \end{munros}
