--- a/southwest.tex
+++ b/southwest.tex
@@ -6,15 +6,15 @@ west to Oban and Mull.
 \subsection{Loch Lomond}
 
 \begin{munros}
-\item Ben Lomond.
+\item Ben Lomond.  \tick
 
 \item Beinn Narnain and Beinn Ìme.
 
-\item Ben Vane.
+\item Ben Vane.  \tick
 
 \item Ben Vorlich.
 
-\item Beinn Chabhair.
+\item Beinn Chabhair. \tick
 \end{munros}
 
 %%%%%
@@ -32,13 +32,13 @@ west to Oban and Mull.
 \begin{munros}
 \item An Caisteal and Beinn a'Chròin.  NN~369~239.
 
-\item \target Cruach Àrdrain and Beinn Tulaichean.  NN~369~239.  Alternatively
-  from Loch Voil.
+\item \target Cruach Àrdrain and Beinn Tulaichean.  Approx.\ 15km, 1200m.
+  NN~369~239.  Alternatively from Loch Voil.
 
 \item Ben More and Stob Binnein.
 
 \item Meall Glas and Sgiath Chuil from Glen Dochart.  Alternatively from Glen
-  Lochay. 
+  Lochay.  \tick
 \end{munros}
 
 %%%%%
@@ -63,7 +63,7 @@ west to Oban and Mull.
 \item Beinn Dòrain and Beinn an Dòthaidh.
 
 \item \target Beinn Achaladair and Beinn a'Chreachain.  21.5km, 1266m; 7--8
-  hrs.  NN313437.
+  hrs.  NN313437. \tick
 
 \item Stob Ghabhar and Stob a'Choire Odhair.
 
@@ -76,8 +76,8 @@ west to Oban and Mull.
 \begin{munros}
 \item Beinn a' Chochuill and Beinn Eunaich.
 
-\item \target\tick Ben Cruachan and Stob Daimh.  13.75km, 1376m; 8--9 hrs.
-  NN080267. 
+\item \target Ben Cruachan and Stob Daimh.  13.75km, 1376m; 8--9 hrs.
+  NN080267.  \tick
 \end{munros}
 
 %%%%%
@@ -85,7 +85,7 @@ west to Oban and Mull.
 \subsection{Mull}
 
 \begin{munros}
-\item Ben More.
+\item Ben More.  \tick
 \end{munros}
 
 %%%%%
@@ -93,7 +93,7 @@ west to Oban and Mull.
 \subsection{Glen Creran}
 
 \begin{munros}
-\item Beinn Sgulaird.
+\item Beinn Sgulaird.  \tick
 
-\item Beinn Fhionnlaidh.
+\item Beinn Fhionnlaidh.  \tick
 \end{munros}
