Added more Corbetts: Glen Coe, Loch Level.

--- a/Corbetts/FarNorth.tex
+++ b/Corbetts/FarNorth.tex
@@ -23,13 +23,19 @@ Beinn Enaiglair from Braemore Junction
 
 \subsection{A832}
 
+\begin{munros}
+\item
 Creag Rainich
 
-Beinn a' Chlaidheimh part of Fisherfield Six
+\item \target
+Beinn a' Chlaidheimh (part of Fisherfield Six).
 
-Beinn Dearg Mòr and Beinn Dearg Bheag from Shenavall (or via Gruinard) **
+\item \target
+Beinn Dearg Mòr and Beinn Dearg Bheag from Shenavall (or via Gruinard).
 
-Sail Mhor **
+\item  \target
+Sail Mhor.  12km; 825m; 5.5--6hrs.  NH053897.  435..
+\end{munros}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
