--- a/Corbetts/all.tex
+++ b/Corbetts/all.tex
@@ -21,13 +21,14 @@
 
 ``\target'' indicates a target.  ``\tick'' indicates I have a printout.  
 
-%% \input{cairngorms}
+\input{cairngorms}
 
-%% \input{southwest} 
+\input{southwest} 
 
-%% \input{central}
+\input{central}
 
-%% \input{glencoe-fortwilliam}
+\input{glencoe-fortwilliam}
+%Beinn Trilleachan
 
 %% \input{A86}
 
