Various more Corbetts.

--- a/Corbetts/all.tex
+++ b/Corbetts/all.tex
@@ -28,13 +28,13 @@
 \input{central}
 
 \input{glencoe-fortwilliam}
-%Beinn Trilleachan
 
-%% \input{A86}
+\input{A86}
 
-%% \input{6}
+\input{6}
 
 %% \input{GlenShiel}
+% Meall Dubh, from Glen Moriston
 
 %% \input{Skye}
 
