--- a/Corbetts/central.tex
+++ b/Corbetts/central.tex
@@ -141,6 +141,10 @@ OL49.
 \item
 Beinn a' Chuallaich.  10.5km; 678m; 4--5hrs.  NN 707 614.  OL49(W). 
 
+\item
+Stob an Aonaich Mhòir.  28.5km; 649m; 7.5--8.5hrs.  NN 521 582 (summit at 937
+693).  385.
+
 \item\target
 Beinn Pharlagain, near Rannoch Station.  18.25km; 640m; 5.5--6hrs.  NN 446
 578.  385.  Could be combined with Sgor Gaibhre and Carn Dearg.  
