--- a/Corbetts/glencoe-fortwilliam.tex
+++ b/Corbetts/glencoe-fortwilliam.tex
@@ -56,4 +56,7 @@ Mam na Gualainn.  19.5km; 1084m; 7--8hrs.  NN 187 622 (Kinlochmore).
 
 \subsection{Ben Nevis Range, from North}
 
-Cruach Innse and Sgùrr Innse
+\begin{munros}
+\item
+Cruach Innse and Sgùrr Innse.   13km; 890m; 6--7hrs.  NN 255 788.  392.
+\end{munros}
