--- a/Corbetts/southwest.tex
+++ b/Corbetts/southwest.tex
@@ -55,7 +55,8 @@ OL48.  Could combine with Meall Glas and Sgiath Chuil.
 
 \begin{munros}
 \item
-Beinn Chuirn.  16km; 706m; 5.5--6hrs.  NN 343 291.  377(E).
+Beinn Chuirn.  16km; 706m; 5.5--6hrs.  NN 343 291 (Dalrigh) (summit at 280
+293).  377(E).
 
 \item
 Beinn Odhar, Beinn Chaorach and Cam Chreag.  21km; 1367m; 7--8hrs.  NN 329 304
@@ -101,3 +102,7 @@ Dùn da Ghaoithe
 \subsection{Glen Creran}
 
 Creach Bheinn
+
+\subsection{Jura}
+
+The Paps of Jura (Beinn an Oir)
